# projman

./: Cargo.toml  Project Manager Config flow.txt  Todo.txt  __proman_project.cfg
notes/: Old Proman Behavior Format Notes.txt  install.json.cfg  install.msgpack.cfg  install.yaml.cfg  projman behavior format.txt  proman.json.cfg  proman.msgpack.cfg  proman.yaml.cfg  user.json.cfg  user.msgpack.cfg  user.yaml.cfg  yaml_json_msgpack_user_install_local_config-files.7z
src/: helpers.rs  main.rs  run.rs
src/behavior/: mod.rs  rust.rs
src/configuration/: mod.rs  storable.rs  storage.rs
src/language_details/: mod.rs
src/local_details/: mod.rs
src/manager/: mod.rs
src/project/: mod.rs  proj_rust.rs
src/structures/: autorun.rs  defaults.rs  executables.rs  mod.rs  var_str.rs
tests/: var_str_tests.rs
tests/configuration/: mod.rs  storage.rs
tests/manager/: mod.rs
tests/project/: proj_rust.rs
tests/structures/: defaults.rs  var_str.rs
