[package]
name = "projman"
version = "0.1.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]

[[bin]]
name = "projman"
path = "src/main.rs"

[[bin]]
name = "run"
path = "src/run.rs"

[[bin]]
name = "scratch"
path = "src/scratch.rs"

[dependencies]
argparse = "0.2.*"
env_logger = "0.4.3"
log = "0.3.8"
os_type="1.0.0"
regex = "0.2.*"
rmp-serde = "0.13.*"
scan_dir = "0.3.3"
semver = "0.8.*"
serde = "1.0.11"
serde_derive = "1.0.*"
serde-hjson = "0.8.*"
serde_json = "1.0.3"
serde_yaml = "0.7.*"
setenv = "0.1.*"
time = "0.1.*"
lazy_static = "0.2.8"
winreg = "0.4.*"